--- a/src/css/pannellum.css
+++ b/src/css/pannellum.css
@@ -19,6 +19,10 @@
   outline: 0;
   line-height: 1.4;
   contain: content;
+  direction: ltr;
+}
+.pnlm-container, .pnlm-load-button {
+  font-family: Helvetica, "Nimbus Sans L", "Liberation Sans", Arial, sans-serif;
 }
 
 .pnlm-container * {
@@ -51,19 +55,16 @@
   width: 100% !important;
   position: static !important;
 }
-
 .pnlm-container:-webkit-full-screen {
   height: 100% !important;
   width: 100% !important;
   position: static !important;
 }
-
 .pnlm-container:-ms-fullscreen {
   height: 100% !important;
   width: 100% !important;
   position: static !important;
 }
-
 .pnlm-container:fullscreen {
   height: 100% !important;
   width: 100% !important;
@@ -72,7 +73,7 @@
 
 .pnlm-render-container {
   cursor: inherit;
-
+  
   /* Fix display bug in Safari 7 */
   position: absolute;
   height: 100%;
@@ -83,7 +84,7 @@
   margin-top: 4px;
   background-color: #fff;
   border: 1px solid #999;
-  border-color: rgba(0, 0, 0, 0.4);
+  border-color: rgba(0,0,0,0.4);
   border-radius: 3px;
   cursor: pointer;
   z-index: 2;
@@ -123,13 +124,11 @@
   bottom: 0;
   background-position: 0 -26px;
   border-top: 1px solid #ddd;
-  border-top-color: rgba(0, 0, 0, 0.10);
+  border-top-color: rgba(0,0,0,0.10);
   border-radius: 0 0 3px 3px;
 }
 
-.pnlm-fullscreen-toggle-button,
-.pnlm-orientation-button,
-.pnlm-hot-spot-debug-indicator {
+.pnlm-fullscreen-toggle-button, .pnlm-orientation-button, .pnlm-hot-spot-debug-indicator {
   width: 26px;
   height: 26px;
 }
@@ -165,7 +164,7 @@
 .pnlm-panorama-info {
   position: absolute;
   bottom: 4px;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0,0,0,0.7);
   border-radius: 0 3px 3px 0;
   padding-right: 10px;
   color: #fff;
@@ -185,14 +184,6 @@
   margin-bottom: 3px;
 }
 
-.pnlm-description-box {
-  position: relative;
-  font-size: 18px;
-  display: table;
-  padding-left: 5px;
-  margin-bottom: 3px;
-}
-
 .pnlm-author-box {
   position: relative;
   font-size: 12px;
@@ -207,7 +198,7 @@
   width: 200px;
   height: 150px;
   margin: -75px 0 0 -100px;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0,0,0,0.7);
   border-radius: 3px;
   text-align: center;
   font-size: 20px;
@@ -245,57 +236,19 @@
 }
 
 @keyframes pnlm-mv {
-  from {
-    left: 0;
-    top: 0;
-  }
-
-  25% {
-    left: 10px;
-    top: 0;
-  }
-
-  50% {
-    left: 10px;
-    top: 10px;
-  }
-
-  75% {
-    left: 0;
-    top: 10px;
-  }
-
-  to {
-    left: 0;
-    top: 0;
-  }
+  from {left:0;top:0;}
+  25% {left:10px;top:0;}
+  50% {left:10px;top:10px;}
+  75% {left:0;top:10px;}
+  to {left:0;top:0;}
 }
 
 @-webkit-keyframes pnlm-mv {
-  from {
-    left: 0;
-    top: 0;
-  }
-
-  25% {
-    left: 10px;
-    top: 0;
-  }
-
-  50% {
-    left: 10px;
-    top: 10px;
-  }
-
-  75% {
-    left: 0;
-    top: 10px;
-  }
-
-  to {
-    left: 0;
-    top: 0;
-  }
+  from {left:0;top:0;}
+  25% {left:10px;top:0;}
+  50% {left:10px;top:10px;}
+  75% {left:0;top:10px;}
+  to {left:0;top:0;}
 }
 
 .pnlm-load-button {
@@ -305,17 +258,30 @@
   width: 200px;
   height: 100px;
   margin: -50px 0 0 -100px;
-  background-color: rgba(0, 0, 0, .7);
+  background-color: rgba(0,0,0,.7);
   border-radius: 3px;
-  text-align: center;
   font-size: 20px;
-  display: table;
   color: #fff;
   cursor: pointer;
+  display: inline-block;
+  border: none;
+  padding: 0;
+  line-height: 1.4;
 }
 
 .pnlm-load-button:hover {
-  background-color: rgba(0, 0, 0, .8);
+  background-color: rgba(0,0,0,.8);
+}
+
+.pnlm-load-button:focus {
+  outline: none;
+  box-shadow: 0px 0px 0px 1px #fff inset;
+}
+
+.pnlm-load-button div {
+  display: table;
+  text-align: center;
+  width: 100%;
 }
 
 .pnlm-load-button p {
@@ -337,10 +303,10 @@
   text-align: center;
   color: #fff;
   table-layout: fixed;
+  z-index: 1;
 }
 
-.pnlm-info-box a,
-.pnlm-author-box a {
+.pnlm-info-box a, .pnlm-author-box a {
   color: #fff;
   word-wrap: break-word;
   overflow-wrap: break-word;
@@ -356,12 +322,31 @@
   display: none;
 }
 
+.pnlm-interaction-msg {
+  display: none;
+  pointer-events: none;
+  background: rgba(0,0,0,0.7);
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  top: 0;
+  left: 0;
+}
+
+.pnlm-outline {
+  border: 1px solid #fff;
+  border-radius: 3px;
+  padding: 0 2px;
+}
+
 .pnlm-about-msg {
   font-size: 11px;
   line-height: 11px;
   color: #fff;
   padding: 5px 8px 5px 8px;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0,0,0,0.7);
   border-radius: 3px;
   position: absolute;
   top: 50px;
@@ -376,13 +361,11 @@
   z-index: 1;
 }
 
-.pnlm-about-msg a:link,
-.pnlm-about-msg a:visited {
+.pnlm-about-msg a:link, .pnlm-about-msg a:visited {
   color: #fff;
 }
 
-.pnlm-about-msg a:hover,
-.pnlm-about-msg a:active {
+.pnlm-about-msg a:hover, .pnlm-about-msg a:active {
   color: #eee;
 }
 
@@ -392,23 +375,19 @@
   cursor: default;
   vertical-align: middle;
   top: 0;
-  z-index: 1;
+  z-index: 0;
 }
-
 .pnlm-hotspot {
   height: 26px;
   width: 26px;
   border-radius: 13px;
 }
-
 .pnlm-hotspot:hover {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255,255,255,0.2);
 }
-
 .pnlm-hotspot.pnlm-info {
   background-position: 0 -104px;
 }
-
 .pnlm-hotspot.pnlm-scene {
   background-position: 0 -130px;
 }
@@ -417,7 +396,7 @@ div.pnlm-tooltip span {
   visibility: hidden;
   position: absolute;
   border-radius: 3px;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0,0,0,0.7);
   color: #fff;
   text-align: center;
   max-width: 200px;
@@ -425,11 +404,9 @@ div.pnlm-tooltip span {
   margin-left: -220px;
   cursor: default;
 }
-
-div.pnlm-tooltip:hover span {
+div.pnlm-tooltip:hover span{
   visibility: visible;
 }
-
 div.pnlm-tooltip:hover span:after {
   content: '';
   position: absolute;
@@ -437,7 +414,7 @@ div.pnlm-tooltip:hover span:after {
   height: 0;
   border-width: 10px;
   border-style: solid;
-  border-color: rgba(0, 0, 0, 0.7) transparent transparent transparent;
+  border-color: rgba(0,0,0,0.7) transparent transparent transparent;
   bottom: -20px;
   left: -10px;
   margin: 0 50%;
@@ -460,15 +437,13 @@ div.pnlm-tooltip:hover span:after {
   left: 50%;
   top: 50%;
 }
-
 .pnlm-face {
   position: absolute;
   -webkit-transform-origin: 0 0 0;
   transform-origin: 0 0 0;
 }
 
-.pnlm-dragfix,
-.pnlm-preview-img {
+.pnlm-dragfix, .pnlm-preview-img {
   position: absolute;
   height: 100%;
   width: 100%;
